test/loop/confidence/errors/pattern_errors_6.loop
# Errors in pattern matching functions




scan(ls) =>
  [x,]                  : []
  [x]       | x < 10    : [x]
            | x > 10      [10]
  [x:xs]                : scan(xs) + x

main ->
  scan([100,2,3])
